$Id: NEWS,v 1.171 2002-05-19 20:50:13 castaglia Exp $

CVS
---------------------------------
- Bug 1612 - Fixed logging of RFC931 usernames in xferlog
- Bug 1595 - Transfers that result in error conditions no longer cause
             the data connection to be closed prematurely via data_cleanup()

1.2.5rc2 - Released 2002-05-13
---------------------------------
- Added Andrew Houghton to the credits
- Added in the new format FAQ
- Bug 1580 - Minor additions to the RPM spec file to allow RPMs to be built
             by non-root users.
- Bug 1546 - PF_ARGV_WRITABLE, PF_ARGV_WRITEABLE are used mixed.  Fixed to
             use PF_ARGV_WRITEABLE consistently (less changes to make).
- Bug 1608 - src/dirtree.c produces two unnecessary warnings.  Fixed to
             cast to mode_t for initialization of variables.
- Bug 1610 - compiling mod_core.c gives an unneeded/dazzling msg
- Removed legacy documentation, updated licence template, licence update
  in ftp.h to include the SSL clause.  Updated CREDITS (ML)
- New mod_ldap (2.8.3)
- Bug 1544 - Daemon does not switch to configured User/Group identity in
             <VirtualHost> as documented
- Bug 1581 - Changed Hide{User,Group} directive to use pointers for
             proper handling of uid_t/gid_t types
- Migrated to the new form of the directive list from the pdd sgml sources
  (ML)
- Bug 1563 - Moved checking for bad address lookup up, to prevent segfault
             when using MasqueradeAddress
- Bug 1567 - Fixed parsing of AuthAliasOnly to honor Boolean parameter
- Bug 1579 - the contrib RPM init.d script make inappropriate use of
             ftpshut in a few cases
- Bug 1588 - Examined return value of inet_get_conn_info() to prevent
             segfaults for ephemeral TCP connections
- Bug 1570 - Changed MasqueradeAddress context checks in code to match
             docs
- Bug 1601 - RNTO handler did not properly cleanup after itself in an 
             error condition, tickling a later segfault